--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,6 +32,7 @@
     position: relative;
     display: flex;
     margin-bottom: 130px;
+    min-width: 250px;
 
     @media screen and (min-width: 768px) {
         margin-bottom: 20px;
@@ -63,7 +64,7 @@
     margin: 0px;
     padding: 0px;
     top: 27px;
-    right: 0px;
+    right: -30px;
     background-color: transparent;
     border: none;
     z-index: 101;
@@ -72,7 +73,6 @@
     top: 46px;
     right: 184px;}
     
-
     @media screen and (min-width: 1200px) {
         display: none;
     }
@@ -93,10 +93,10 @@
 
 .header-hero__btn-menu.is-open .header-hero__icon-close {
     opacity: 1;
-    position: fixed;
+    position: absolute;
     @media screen and (max-width: 767px){
-    top: 20px;
-    right: 145px;
+    top: 0px;
+    right: 60px;
     transform: translateX(0px);
     transition-property:  transform;
     transition-duration: 250ms;
@@ -104,8 +104,8 @@
     }
     @media screen and (min-width: 768px) 
     and (max-width: 1199px) {
-    top: 25px;
-    right: 535px;
+    top: -25px;
+    right: -170px;
     transform: translateX(0px);
     transition-property: transform;
     transition-duration: 250ms;
@@ -122,47 +122,50 @@
     opacity: 0;
    
     &.is-open {
-            opacity: 1;
-            display: block;
-            transform: translateX(0px); 
+        opacity: 1;
+        overflow: hidden;
+        transform: translateX(-80px);
+        transition-property: opacity, transform;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            
+            
         }
 
     @media screen and (max-width: 767px) {
-        position: fixed;
+        position: absolute;
         list-style: none;
         text-align: left;
         top: 0px;
-        right: 125px;
+        right: -70px;
         width: 250px;
         height: 502px;
         padding-left: 20px;
+        padding-right: 20px;
         padding-top: 60px;
         background-color: #E17992;
         z-index: 100;
         transform: translateX(-250px);
-        transition-property: opacity, transform;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        
+        box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
     }
 
     @media screen and (min-width: 768px)
     and (max-width: 1199px) {
-        position: fixed;
+        position: absolute;
         list-style: none;
         text-align: left;
         padding-left: 20px;
+        padding-right: 20px;
         padding-top: 54px;
         width: 254px;
         height: 1020px;
         top: 0px;
-        right: 500px;
+        right: -100px;
         background-color: #E17992;
         z-index: 100;
         transform: translateX(-250px);
-        transition-property: opacity, transform;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
+        
         
     }
 
@@ -206,12 +209,14 @@
 
 }
 
-.header-hero__link--red {
+.header-hero__link:hover,
+.header-hero__link:focus{
     color: $title-text-color;
 }
 
-.header-hero__btn {
 
+
+.header-hero__btn {
     height: 44px;
     font-family: $primary-font;
     font-weight: 700;
@@ -229,20 +234,85 @@
         width: 209px;
         margin-bottom: 32px;
     }
-
     @media screen and (min-width: 768px) {
         width: 186px;
         margin-left: 14px;
         margin-bottom: 33px;
     }
-
     @media screen and (min-width: 1200px) {
         width: 159px;
         margin-top: 40px;
         margin-left: 141px;
     }
-
 }
+
+.header-hero__btn:hover,
+.header-hero__btn:focus {
+    background-color: $title-text-color;
+    color: $white-color;
+}
+
+/*-----------------------BUY MENU------------------*/
+.dropbtn {
+cursor: pointer;
+}
+
+.dropdown {
+    position: absolute;
+    top: 115px;
+    right: 20px;
+    border-radius: 22px;
+    top: 115px;
+    right: 20px;
+    z-index: 1;
+    @media screen and (max-width: 767px) {
+        top: 115px;
+        right: 20px;
+        }
+    
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        top: 115px;
+        right: 25px;
+        }
+    
+     @media screen and (min-width: 1200px) {
+        top: 95px;
+        right: 5px;
+        z-index: 100;
+        }
+    
+
+    
+}
+
+.dropdown-content {
+    display: none;
+    background-color: #f7b793;
+    min-width: 209px;
+    height: 225px;
+    border-radius: 22px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    
+}
+
+.dropdown-content li {
+    display: flex;
+    align-items: center;
+    color: black;
+    padding: 12px 16px;   
+}
+
+.dropdown-content p {
+    margin-left: 10px;
+}
+
+.show {
+    display: block;
+}
+/*-----------------------END BUY MENU------------------*/
+
 
 .btn-mobail {
     @media screen and (min-width: 1200px) {
