--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,14 +1,11 @@
 .container {
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 60px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
   width: 100%;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
 
   @media screen and (min-width: 480px) {
     width: 480px;
