--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,9 @@
-<section class="footer">
+<footer class="footer">
   <div class="footer__holder container">
     <div class="footer__holder-titles">
       <div class="footer__title">
         <p class="footer__upper-title">homemade ice cream made</p>
-        <h2 class="footer__main-title">with passion</h2>
+        <p class="footer__main-title">with passion</p>
       </div>
       <div class="footer__holder-contacts">
         <ul class="footer__icons-list socials">
@@ -63,4 +63,4 @@
     <p class="footer__sign-text">&#169; 2022 - IceCream.</p>
     <p class="footer__sign-text">All Rights Reserved.</p>
   </div>
-</section>
+</footer>
