--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -86,16 +86,15 @@
   align-items: center;
   justify-content: right;
   margin-bottom: 40px;
-
-  @media screen and (min-width: 768px) {
-    margin-bottom: 0;
-  }
 }
 
 .footer__icons-item {
   margin-right: 28px;
   &:last-child {
     margin-right: 0;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
   }
 }
 
@@ -116,7 +115,9 @@
   }
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 47px;
+    width: 34px;
+    height: 34px;
+    // margin-bottom: 47px;
   }
 }
 
@@ -124,9 +125,15 @@
   fill: $icon-color;
   justify-content: center;
   align-items: center;
+  width: 32px;
+  height: 32px;
   &:hover,
   &:focus {
     fill: $title-text-color;
+  }
+  @media screen and (min-width: 768px) {
+    width: 34px;
+    height: 34px;
   }
 }
 
