--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,18 +16,16 @@
         aria-expanded="false"
         data-menu-button
       >
+        <svg class="header-hero__icon-close" width="14" height="14">
+            <use class="icon-close" href="/src/images/icons/symbol-defs.svg#icon-close"></use>
+        </svg>
         <svg class="header-hero__icon-burger" width="20" height="12">
           <use
             class="icon-burger"
             href="/src/images/icons/symbol-defs.svg#icon-burger"
           ></use>
         </svg>
-        <svg class="header-hero__icon-close" width="14" height="14">
-          <use
-            class="icon-close"
-            href="/src/images/icons/symbol-defs.svg#icon-close"
-          ></use>
-        </svg>
+       
       </button>
 
       <div class="header-hero__menu" data-menu>
@@ -37,9 +35,10 @@
           class="header-hero__btn btn-mobail dropbtn"
         >
           Buy now
-          <svg class="header-hero__btn-svg" width="4" height="8">
-            <use href="/src/images/icons/arrow2.svg"></use>
-          </svg>
+        <svg class="btn-svg" width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 1L5 5L1 9" stroke="#D41443" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+
         </button>
 
         <div class="dropdown">
@@ -103,9 +102,10 @@
         class="header-hero__btn btn-desctop dropbtn"
       >
         Buy now
-        <svg class="header-hero__btn-svg" width="4" height="8">
-          <use href="/src/images/icons/arrow2.svg"></use>
+        <svg class="btn-svg" width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 1L5 5L1 9" stroke="#D41443" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
+
       </button>
     </nav>
     <div class="hero">
