--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -68,7 +68,7 @@
     margin: 0px;
     padding: 0px;
     top: 27px;
-    right: -30px;
+    right: -15px;
     background-color: transparent;
     border: none;
     z-index: 101;
@@ -104,7 +104,7 @@
 
     @media screen and (max-width: 767px) {
         top: 0px;
-        right: 60px;
+        right: 22px;
         transform: translateX(0px);
         transition-property: transform;
         transition-duration: 250ms;
@@ -113,7 +113,7 @@
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         top: -25px;
-        right: -170px;
+        right: -197px;
         transform: translateX(0px);
         transition-property: transform;
         transition-duration: 250ms;
@@ -145,7 +145,7 @@
         list-style: none;
         text-align: left;
         top: 0px;
-        right: -70px;
+        right: -95px;
         width: 250px;
         height: 502px;
         padding-left: 20px;
@@ -167,7 +167,7 @@
         width: 254px;
         height: 1020px;
         top: 0px;
-        right: -100px;
+        right: -127px;
         background-color: #E17992;
         z-index: 100;
         transform: translateX(-250px);
@@ -259,8 +259,12 @@
 
 .header-hero__btn:hover,
 .header-hero__btn:focus {
-    background-color: $title-text-color;
-    color: $white-color;
+    background-color: #ECEBEB;
+    
+}
+
+.btn-svg {
+    margin-left: 14px;
 }
 
 /*-----------------------BUY MENU------------------*/
@@ -341,6 +345,7 @@
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         margin-left: 345px;
         margin-bottom: 0px;
+        width: 160px;
     }
 
     @media screen and (min-width: 1200px) {
