--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -68,15 +68,16 @@
     margin: 0px;
     padding: 0px;
     top: 27px;
-    right: -30px;
+    right: -15px;
     background-color: transparent;
     border: none;
     z-index: 101;
-    @media screen and (min-width: 768px)
-    and (max-width: 1199px) {
-    top: 46px;
-    right: 184px;}
-    
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        top: 46px;
+        right: 184px;
+    }
+
     @media screen and (min-width: 1200px) {
         display: none;
     }
@@ -100,22 +101,23 @@
 .header-hero__btn-menu.is-open .header-hero__icon-close {
     opacity: 1;
     position: absolute;
-    @media screen and (max-width: 767px){
-    top: 0px;
-    right: 60px;
-    transform: translateX(0px);
-    transition-property:  transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 767px) {
+        top: 0px;
+        right: 22px;
+        transform: translateX(0px);
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
-    @media screen and (min-width: 768px) 
-    and (max-width: 1199px) {
-    top: -25px;
-    right: -170px;
-    transform: translateX(0px);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        top: -25px;
+        right: -197px;
+        transform: translateX(0px);
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 
@@ -134,16 +136,16 @@
         transition-property: opacity, transform;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            
-            
-        }
+
+
+    }
 
     @media screen and (max-width: 767px) {
         position: absolute;
         list-style: none;
         text-align: left;
         top: 0px;
-        right: -70px;
+        right: -95px;
         width: 250px;
         height: 502px;
         padding-left: 20px;
@@ -155,8 +157,7 @@
         box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
     }
 
-    @media screen and (min-width: 768px)
-    and (max-width: 1199px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         position: absolute;
         list-style: none;
         text-align: left;
@@ -166,13 +167,13 @@
         width: 254px;
         height: 1020px;
         top: 0px;
-        right: -100px;
+        right: -127px;
         background-color: #E17992;
         z-index: 100;
         transform: translateX(-250px);
         box-shadow: -8px 0px 20px rgba(0, 0, 0, 0.25);
-        
-        
+
+
     }
 
     @media screen and (min-width: 1200px) {
@@ -216,7 +217,7 @@
 }
 
 .header-hero__link:hover,
-.header-hero__link:focus{
+.header-hero__link:focus {
     color: $title-text-color;
 }
 
@@ -242,11 +243,13 @@
         width: 209px;
         margin-bottom: 32px;
     }
+
     @media screen and (min-width: 768px) {
         width: 186px;
         margin-left: 14px;
         margin-bottom: 33px;
     }
+
     @media screen and (min-width: 1200px) {
         width: 159px;
         margin-top: 40px;
@@ -256,13 +259,17 @@
 
 .header-hero__btn:hover,
 .header-hero__btn:focus {
-    background-color: $title-text-color;
-    color: $white-color;
+    background-color: #ECEBEB;
+    
+}
+
+.btn-svg {
+    margin-left: 14px;
 }
 
 /*-----------------------BUY MENU------------------*/
 .dropbtn {
-cursor: pointer;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -273,24 +280,25 @@ cursor: pointer;
     top: 115px;
     right: 20px;
     z-index: 1;
+
     @media screen and (max-width: 767px) {
         top: 115px;
         right: 20px;
-        }
-    
+    }
+
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         top: 115px;
         right: 25px;
-        }
-    
-     @media screen and (min-width: 1200px) {
+    }
+
+    @media screen and (min-width: 1200px) {
         top: 95px;
         right: 5px;
         z-index: 100;
-        }
-    
+    }
 
-    
+
+
 }
 
 .dropdown-content {
@@ -302,14 +310,14 @@ cursor: pointer;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    
+
 }
 
 .dropdown-content li {
     display: flex;
     align-items: center;
     color: black;
-    padding: 12px 16px;   
+    padding: 12px 16px;
 }
 
 .dropdown-content p {
@@ -319,6 +327,7 @@ cursor: pointer;
 .show {
     display: block;
 }
+
 /*-----------------------END BUY MENU------------------*/
 
 
@@ -336,6 +345,7 @@ cursor: pointer;
     @media screen and (min-width: 768px) and (max-width: 1199px) {
         margin-left: 345px;
         margin-bottom: 0px;
+        width: 160px;
     }
 
     @media screen and (min-width: 1200px) {
@@ -379,7 +389,6 @@ cursor: pointer;
 }
 
 .page-title {
-    // max-width: 280px;
     font-family: 'Titan One';
     font-weight: 400;
     font-size: 26px;
@@ -452,8 +461,7 @@ cursor: pointer;
 
     &:hover,
     :focus {
-        color: $title-text-color;
-        background-color: $white-color;
+        background-color: $primary-focus-color;
     }
 
     @include mq(desktop) {
@@ -467,8 +475,7 @@ cursor: pointer;
 
     &:hover,
     :focus {
-        color: $white-color;
-        background-color: $title-text-color;
+        background-color: $second-focus-color;
     }
 }
 
@@ -564,6 +571,11 @@ cursor: pointer;
 
     @include mq(mobile) {
         display: none;
+    }
+
+    &:hover,
+    :focus {
+        background-color: $second-focus-color;
     }
 }
 
