--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -55,7 +55,7 @@
 </section>
 
 <div class="backdrop is-hidden" data-modal>
-  <div class="modal">
+  <div class="modal effect">
     <button data-modal-close class="close-button" type="button">
       <svg
         class="close-icon"
