--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,9 +1,8 @@
 .about {
   width: 100%;
+  max-width: 1500px;
   background-color: $primary-background-color;
-}
-
-.about__container {
+  padding-top: 60px;
   background-repeat: no-repeat;
   background-size: contain;
 
@@ -21,7 +20,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .about__container {
+  .about {
     @media screen and (max-width: 767px) {
       background-image: url('../images/about/about-2_sm@2x.png');
       background-position: 0 594px;
@@ -34,8 +33,13 @@
   }
 }
 
+.about__container {
+  @media screen and (max-width: 767px) {
+    padding-bottom: 40px;
+  }
+}
+
 .about__subtitle {
-  padding-top: 60px;
   padding-right: 44px;
   padding-left: 38px;
   font-family: $second-font;
@@ -83,7 +87,7 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     margin-left: 0px;
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
   }
 }
 
@@ -173,7 +177,6 @@
 .about__btn {
   position: relative;
   margin-top: 20px;
-  margin-bottom: 40px;
   padding-left: 37px;
   padding-right: 60px;
   text-align: left;
@@ -188,13 +191,8 @@
 
   @media screen and (min-width: 768px) {
     margin-top: 40px;
-    margin-bottom: 60px;
     font-size: 16px;
     line-height: 1.31;
-  }
-
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 40px;
   }
 }
 
@@ -225,6 +223,8 @@
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   z-index: 7;
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -236,14 +236,16 @@
   height: 80%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  border-radius: 7px;
   transform: translate(-50%, -50%);
 
   @media screen and (min-width: 480px) {
-    width: 60%;
+    width: 80%;
+    height: 80%;
   }
   @media screen and (min-width: 1200px) {
     width: 40%;
+    height: 80%;
   }
 }
 
@@ -319,7 +321,7 @@
   }
 }
 
-//кнопка Модального окна
+// //кнопка Модального окна
 
 .close-button {
   width: 30px;
@@ -339,6 +341,58 @@
 
 .backdrop.is-hidden {
   opacity: 0;
-  visibility: hidden;
+  visibility: visible;
   pointer-events: none;
 }
+
+// .modal {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   width: 50%;
+//   max-width: 630px;
+//   min-width: 320px;
+//   height: auto;
+//   z-index: 2000;
+//   visibility: hidden;
+//   backface-visibility: hidden;
+//   transform: translateX(-50%) translateY(-50%);
+// }
+
+// .about__container {
+//   visibility: visible;
+// }
+
+// .backdrop {
+//   position: fixed;
+//   width: 100%;
+//   height: 100%;
+//   visibility: hidden;
+//   top: 0;
+//   left: 0;
+//   z-index: 1000;
+//   opacity: 0;
+//   background: rgba(143, 27, 15, 0.8);
+//   transition: all 0.3s;
+// }
+
+// .about__container ~ .modal {
+//   opacity: 1;
+//   visibility: visible;
+// }
+
+// .effect {
+//   perspective: 1300px;
+// }
+
+// .effect .forma {
+//   transform-style: preserve-3d;
+//   transform: rotateX(-70deg);
+//   transition: all 0.3s;
+//   opacity: 0;
+// }
+
+// .about__container.effect .forma {
+//   transform: rotateX(0deg);
+//   opacity: 1;
+// }
