--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,39 +41,7 @@
 
         </button>
 
-        <div class="dropdown">
-          <div id="myDropdown" class="dropdown-content">
-            <ul>
-              <li>
-                <img
-                  src="/src/images/products/products-1_lg.png"
-                  alt="img"
-                  width="40"
-                  height="40"
-                />
-                <p>ICE CREAM</p>
-              </li>
-              <li>
-                <img
-                  src="/src/images/products/products-2_lg.png"
-                  alt="img"
-                  width="40"
-                  height="40"
-                />
-                <p>ICE COFEE</p>
-              </li>
-              <li>
-                <img
-                  src="/src/images/products/products-3_lg.png"
-                  alt="img"
-                  width="40"
-                  height="40"
-                />
-                <p>MILKSHAKES</p>
-              </li>
-            </ul>
-          </div>
-        </div>
+        
 
         <ul class="header-hero__list">
           <li class="header-hero__item">
@@ -107,7 +75,28 @@
         </svg>
 
       </button>
+
+      <div class="dropdown">
+        <div id="myDropdown" class="dropdown-content">
+          <ul>
+            <li>
+              <img src="/src/images/products/products-1_lg.png" alt="img" width="40" height="40" />
+              <p>ICE CREAM</p>
+            </li>
+            <li>
+              <img src="/src/images/products/products-2_lg.png" alt="img" width="40" height="40" />
+              <p>ICE COFEE</p>
+            </li>
+            <li>
+              <img src="/src/images/products/products-3_lg.png" alt="img" width="40" height="40" />
+              <p>MILKSHAKES</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+
     </nav>
+
     <div class="hero">
       <div class="flex-container">
         <div>
