--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -99,10 +99,10 @@
 
 .header-hero__btn-menu.is-open .header-hero__icon-close {
     opacity: 1;
-    position: absolute;
+    position: fixed;
 
     @media screen and (max-width: 767px) {
-        top: 0px;
+        top: 25px;
         right: 22px;
         transform: translateX(0px);
         transition-property: transform;
@@ -111,8 +111,8 @@
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-        top: -25px;
-        right: -197px;
+        top: 25px;
+        right: 32px;
         transform: translateX(0px);
         transition-property: transform;
         transition-duration: 250ms;
@@ -140,11 +140,11 @@
     }
 
     @media screen and (max-width: 767px) {
-        position: absolute;
+        position: fixed;
         list-style: none;
         text-align: left;
         top: 0px;
-        right: -95px;
+        right: -80px;
         width: 250px;
         height: 502px;
         padding-left: 20px;
@@ -157,7 +157,7 @@
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-        position: absolute;
+        position: fixed;
         list-style: none;
         text-align: left;
         padding-left: 20px;
@@ -166,7 +166,7 @@
         width: 254px;
         height: 1020px;
         top: 0px;
-        right: -127px;
+        right: -80px;
         background-color: #E17992;
         z-index: 100;
         transform: translateX(-250px);
@@ -272,17 +272,15 @@
 }
 
 .dropdown {
-    position: absolute;
-    top: 115px;
-    right: 20px;
+    position: fixed;
+    
     border-radius: 22px;
-    top: 115px;
-    right: 20px;
-    z-index: 1;
+  
+    z-index: 100;
 
     @media screen and (max-width: 767px) {
         top: 115px;
-        right: 20px;
+        right: 21px;
     }
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -291,8 +289,9 @@
     }
 
     @media screen and (min-width: 1200px) {
+        position: absolute;
         top: 95px;
-        right: 5px;
+        right: 0px;
         z-index: 100;
     }
 
