--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -23,6 +23,20 @@
   z-index: 0;
   margin-left: auto;
   margin-right: auto;
+  background-image: repeating-linear-gradient(
+    to bottom,
+    $complementary-color,
+    $complementary-color 1px,
+
+    rgba(0, 0, 0, 0) 1px,
+
+    rgba(0, 0, 0, 0) 32px
+  );
+  width: 100%;
+  height: 100%;
+  background-position: center bottom -74px;
+  background-size: calc(100% - 100px) 100%;
+  background-repeat: no-repeat;
   @media screen and (min-width: 768px) {
     max-width: 620px;
   }
@@ -68,57 +82,57 @@
     line-height: 1.81;
   }
 }
-.customer__text__comment::after {
-  position: absolute;
-  content: '';
-  top: 74px;
-  left: 50px;
+// .customer__text__comment::after {
+//   position: absolute;
+//   content: '';
+//   top: 74px;
+//   left: 50px;
 
-  background-image: repeating-linear-gradient(
-    to bottom,
-    $complementary-color,
-    $complementary-color 1px,
+//   background-image: repeating-linear-gradient(
+//     to bottom,
+//     $complementary-color,
+//     $complementary-color 1px,
 
-    rgba(0, 0, 0, 0) 1px,
+//     rgba(0, 0, 0, 0) 1px,
 
-    rgba(0, 0, 0, 0) 32px
-  );
-  width: 100%;
-  height: 100%;
-  background-position: center bottom 2px;
-  background-size: calc(100% - 100px) 100%;
-  background-repeat: no-repeat;
+//     rgba(0, 0, 0, 0) 32px
+//   );
+//   width: 100%;
+//   height: 100%;
+//   background-position: center bottom 2px;
+//   background-size: calc(100% - 100px) 100%;
+//   background-repeat: no-repeat;
 
-  z-index: -2;
-  @media screen and (min-width: 768px) {
-    background-size: calc(100% - 20px) 100%;
-    background-image: repeating-linear-gradient(
-      to bottom,
-      $complementary-color,
-      $complementary-color 1px,
+//   z-index: -2;
+//   @media screen and (min-width: 768px) {
+//     background-size: calc(100% - 20px) 100%;
+//     background-image: repeating-linear-gradient(
+//       to bottom,
+//       $complementary-color,
+//       $complementary-color 1px,
 
-      rgba(0, 0, 0, 0) 1px,
+//       rgba(0, 0, 0, 0) 1px,
 
-      rgba(0, 0, 0, 0) 32px
-    );
-    top: 70px;
-    left: 10px;
-  }
-  @media screen and (min-width: 1200px) {
-    background-size: calc(100% - 100px) 100%;
-    background-image: repeating-linear-gradient(
-      to bottom,
-      $complementary-color,
-      $complementary-color 1px,
+//       rgba(0, 0, 0, 0) 32px
+//     );
+//     top: 70px;
+//     left: 10px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     background-size: calc(100% - 100px) 100%;
+//     background-image: repeating-linear-gradient(
+//       to bottom,
+//       $complementary-color,
+//       $complementary-color 1px,
 
-      rgba(0, 0, 0, 0) 1px,
+//       rgba(0, 0, 0, 0) 1px,
 
-      rgba(0, 0, 0, 0) 32px
-    );
-    top: 48px;
-    left: 0;
-  }
-}
+//       rgba(0, 0, 0, 0) 32px
+//     );
+//     top: 48px;
+//     left: 0;
+//   }
+// }
 .customer__text__comment::before {
   position: absolute;
   content: '';
