--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -28,20 +28,24 @@
     $complementary-color,
     $complementary-color 1px,
 
-    rgba(0, 0, 0, 0) 1px,
+    $gradient-customs 1px,
 
-    rgba(0, 0, 0, 0) 32px
+    $gradient-customs 32px
   );
   width: 100%;
   height: 100%;
-  background-position: center bottom -74px;
+  background-position: center top 74px;
   background-size: calc(100% - 100px) 100%;
   background-repeat: no-repeat;
   @media screen and (min-width: 768px) {
     max-width: 620px;
+    background-position: center top 67px;
+    background-size: calc(100% - 6px) 100%;
   }
   @media screen and (min-width: 1200px) {
     max-width: 968px;
+    background-position: center top 68px;
+    background-size: calc(100% - 73px) 100%;
   }
 }
 .customer__img {
@@ -58,9 +62,10 @@
   font-size: 16px;
   line-height: 2;
   padding-top: 43px;
-  padding-left: 65px;
   padding-right: 58px;
-  padding-bottom: 20px;
+  padding-bottom: 24px;
+  padding-left: 65px;
+
   margin-bottom: 26px;
   letter-spacing: 0.04em;
   // text-decoration: underline 1px solid $complementary-color;
@@ -68,14 +73,14 @@
   // background-image: url( repeating-linear-gradient);
 
   @media screen and (min-width: 768px) {
-    padding-top: 37px;
+    padding-top: 30px;
     padding-left: 51px;
     padding-right: 55px;
-    padding-bottom: 44px;
+    padding-bottom: 25px;
     line-height: 2.14;
   }
   @media screen and (min-width: 1200px) {
-    padding-top: 47px;
+    padding-top: 35px;
     padding-left: 109px;
     padding-right: 109px;
     padding-bottom: 39px;
