--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -25,12 +25,10 @@
   margin-right: auto;
   background-image: repeating-linear-gradient(
     to bottom,
-    $complementary-color,
     $complementary-color 1px,
-
-    $gradient-customs 1px,
-
-    $gradient-customs 32px
+    $complementary-color 2px,
+    $gradient-customs 2px,
+    $gradient-customs 33px
   );
   width: 100%;
   height: 100%;
@@ -83,7 +81,7 @@
     padding-top: 35px;
     padding-left: 109px;
     padding-right: 109px;
-    padding-bottom: 39px;
+    padding-bottom: 38px;
     line-height: 1.81;
   }
 }
