--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -85,6 +85,7 @@
 
 .header-hero__btn-menu .header-hero__icon-close {
     opacity: 0;
+    visibility: hidden;
 
     @media screen and (max-width: 767px) {
         transform: translateX(-250px);
@@ -100,6 +101,7 @@
 .header-hero__btn-menu.is-open .header-hero__icon-close {
     opacity: 1;
     position: fixed;
+    visibility: visible;
 
     @media screen and (max-width: 767px) {
         top: 25px;
@@ -127,13 +129,16 @@
 
 .header-hero__menu {
     opacity: 0;
+    visibility: hidden;
+    
 
     &.is-open {
         opacity: 1;
+        visibility: visible;
         overflow: hidden;
         transform: translateX(-80px);
         transition-property: opacity, transform;
-        transition-duration: 250ms;
+        transition-duration: 350ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
