add transition on button

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -241,6 +241,8 @@
 
   margin-bottom: 10px;
 
+  transition: background-color $transition-timing $timing-function;
+
   @media screen and (min-width: 768px) {
     min-width: 192px;
     padding-left: 30px;
@@ -275,6 +277,10 @@
   padding-bottom: 14px;
   padding-left: 32px;
   padding-right: 49px;
+
+  transition: background-color $transition-timing $timing-function;
+
+  cursor: pointer;
 
   &:hover,
   &:focus {
