--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -23,3 +23,5 @@ $second-focus-color: #ecebeb;
 $background-contacts-primary: #fff5f6;
 $background-contacts-secondary: #e5e5e5;
 $gradient-customs: rgba(0, 0, 0, 0);
+$transition-timing: 250ms;
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
