исправлен background-image

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,8 +1,8 @@
 .about {
   width: 100%;
-  max-width: 1500px;
   background-color: $primary-background-color;
   padding-top: 60px;
+
   background-repeat: no-repeat;
   background-size: contain;
 
@@ -14,6 +14,7 @@
   @media screen and (min-width: 1200px) {
     background-image: url('../images/about/about-2_lg.png');
     background-position: 0 236px;
+    max-height: 1000px;
   }
 }
 
@@ -29,6 +30,7 @@
     @media screen and (min-width: 1200px) {
       background-image: url('../images/about/about-2_lg@2x.png');
       background-position: 0 236px;
+      max-height: 1000px;
     }
   }
 }
