--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,24 +1,21 @@
 .contacts-section {
   padding-bottom: 40px;
   background: linear-gradient(
-    to top,
-    $background-contacts-primary 76%,
-    $white-color 76%
+    $white-color 20%,
+    $background-contacts-primary 20%  
   );
   @media screen and (min-width: 768px) {
     padding-bottom: 40px;
     background: linear-gradient(
-      to top,
-      $background-contacts-primary 49%,
-      $white-color 49%
+      $white-color 40%,
+      $background-contacts-primary 40%
     );
   }
   @media screen and (min-width: 1200px) {
     padding-bottom: 121px;
     background: linear-gradient(
-      to top,
-      $background-contacts-primary 77%,
-      $white-color 77%
+      $white-color 13%,
+      $background-contacts-primary 13%,   
     );
   }
 
