--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -2,11 +2,9 @@
   width: 100%;
   background-color: $primary-background-color;
   padding-top: 60px;
-}
 
-.about__container {
+  background-size: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
 
   @media screen and (max-width: 767px) {
     background-image: url('../images/about/about-2_sm.png');
