--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -21,7 +21,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .about__container {
+  .about {
     @media screen and (max-width: 767px) {
       background-image: url('../images/about/about-2_sm@2x.png');
       background-position: 0 594px;
