Adedd pointer events

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -43,7 +43,7 @@
   margin-bottom: 130px;
   min-width: 250px;
 
-  @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) {
     margin-bottom: 20px;
     padding-top: 32px;
   }
@@ -127,12 +127,16 @@
 }
 
 .header-hero__menu {
+  @media screen and (max-width: 1199px) {
   opacity: 0;
-  z-index: -5;
+  pointer-events: none;
+}
+  
   
 
   &.is-open {
     opacity: 1;
+    pointer-events: all;
     transform: translateX(-80px);
     transition-property: opacity, transform;
     transition-duration: 350ms;
@@ -164,7 +168,7 @@
     padding-right: 20px;
     padding-top: 54px;
     width: 254px;
-    height: 700px;
+    height: 1020px;
     top: 0px;
     right: -80px;
     background-color: #e17992;
