--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -83,8 +83,8 @@
   position: absolute;
   margin: 0px;
   padding: 0px;
-  top: 27px;
-  right: 20px;
+  top: 23px;
+  right: 25px;
   background-color: transparent;
   border: none;
   z-index: 101;
@@ -631,5 +631,5 @@
 }
 
 .header-hero__menu.is-open {
-  max-height: 100%;
+  height: 100%;
 }
