--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -237,12 +237,14 @@
 
   position: relative;
   margin: auto;
+  padding-bottom: 20px;
   width: 80%;
-  height: 50%;
+  // height: 80%;
   border-radius: 7px;
   line-height: 1.5;
   font-family: sans-serif;
   background-color: $reviews-background-color;
+  // overflow-y: auto;
 
   // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
   //   0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -251,11 +253,11 @@
 
   @media screen and (min-width: 480px) {
     width: 80%;
-    height: 500px;
+    // height: 70%;
   }
   @media screen and (min-width: 1200px) {
     width: 50%;
-    height: 500px;
+    // height: 70%;
   }
 }
 
@@ -310,6 +312,10 @@
   font-size: 15px;
   line-height: 1.17;
   color: $black-color;
+}
+
+.form__subtitle {
+  overflow-y: scroll;
 }
 
 .modal {
