add window icon

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ice-cream</title>
+    <title>Ice cream</title>
+    <link rel="shortcut icon" href="/src/images/logo-ice.ico" />
   </head>
   <body></body>
 </html>
