add title an numbers

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -42,6 +42,47 @@
           </svg>
         </button>
       </div>
+
+      <!--  -->
+      <div class="content">
+        <h2 class="content__title">
+          ICE CREAM <br />
+          MADE WITH <br />
+          <span class="content__title--2">PASSION</span>
+        </h2>
+      </div>
+      <!-- group -->
+      <div class="group-1">
+        <div class="numbers">
+          <span class="number__16">16</span>
+        </div>
+        <div class="numbers">
+          <span class="number__26">26</span>
+        </div>
+      </div>
+
+      <div class="group">
+        <svg
+          class="group__svg"
+          width="30"
+          height="30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle cx="15" cy="15" r="15" fill="#fff" />
+        </svg>
+      </div>
+      <div class="group">
+        <svg
+          class="group__svg"
+          width="30"
+          height="30"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle cx="15" cy="15" r="15" fill="#fff" />
+        </svg>
+      </div>
     </header>
   </body>
 </html>
