--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -16,6 +16,7 @@ header {
 .nav {
   display: flex;
   justify-content: center;
+  background-color: rgba(156, 5, 65, 0.0666666667);
 }
 .nav__img {
   margin-top: 37px;
@@ -47,4 +48,40 @@ header {
 }
 .nav__svg {
   margin-left: 12px;
+}
+
+.content {
+  float: left;
+  position: relative;
+  margin-top: 74px;
+  margin-left: 70px;
+  background-color: #fb0cbb;
+}
+.content__title {
+  font-family: "Titan One", cursive;
+  font-size: 38px;
+  line-height: 43.51px;
+  letter-spacing: 4%;
+  color: #FFFFFF;
+}
+.content__title--2 {
+  font-family: "Titan One", cursive;
+  font-size: 38px;
+  line-height: 43.51px;
+  letter-spacing: 4%;
+  color: #D41443;
+}
+
+.group {
+  position: relative;
+  margin-left: 1280px;
+  background-color: black;
+}
+.group__svg {
+  margin-top: 66px;
+}
+
+.group-1 {
+  position: absolute;
+  background-color: #FFFFFF;
 }/*# sourceMappingURL=judith.css.map */
