--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -12,7 +12,7 @@ header
 .nav
     display: flex
     justify-content: center
-
+    background-color: #9c054111
     &__img
 
         margin-top: 37px
@@ -39,3 +39,32 @@ header
         color: $pink2
     &__svg
         margin-left: 12px
+
+.content
+    float: left
+    position: relative
+    margin-top: 74px
+    margin-left: 70px
+    background-color: #fb0cbb
+    &__title
+        font-family: $font-titan
+        font-size: 38px
+        line-height: 43.51px
+        letter-spacing: 4%
+        color: $whithe
+    &__title--2
+        font-family: $font-titan
+        font-size: 38px
+        line-height: 43.51px
+        letter-spacing: 4%
+        color: $pink2
+.group
+    position: relative
+    margin-left: 1280px
+    background-color: black
+    &__svg
+        margin-top: 66px
+.group-1
+    position: absolute
+
+    background-color: $whithe
