change styles, add img, svg, finish html and css

--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -16,7 +16,11 @@ header {
 .nav {
   display: flex;
   justify-content: center;
-  background-color: rgba(156, 5, 65, 0.0666666667);
+}
+.nav__elipse {
+  position: absolute;
+  margin-top: 75px;
+  margin-left: 360px;
 }
 .nav__img {
   margin-top: 37px;
@@ -28,6 +32,9 @@ header {
 .nav__link {
   margin-top: 54px;
   color: #FFFFFF;
+}
+.nav__link--2 {
+  margin-top: 54px;
 }
 .nav__button {
   width: 159px;
@@ -50,12 +57,17 @@ header {
   margin-left: 12px;
 }
 
+.ice {
+  position: absolute;
+  margin-left: 750px;
+  margin-top: 17px;
+}
+
 .content {
   float: left;
   position: relative;
   margin-top: 74px;
   margin-left: 70px;
-  background-color: #fb0cbb;
 }
 .content__title {
   font-family: "Titan One", cursive;
@@ -71,11 +83,37 @@ header {
   letter-spacing: 4%;
   color: #D41443;
 }
+.content__buttons {
+  margin-top: 24px;
+}
+.content__button {
+  width: 107px;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  background-color: #D41443;
+  font-family: "DM Sans", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+  margin-right: 12px;
+}
+.content__button--whithe {
+  width: 138px;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  font-family: "DM Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #D41443;
+}
 
 .group {
-  position: relative;
   margin-left: 1280px;
-  background-color: black;
 }
 .group__svg {
   margin-top: 66px;
@@ -83,5 +121,58 @@ header {
 
 .group-1 {
   position: absolute;
-  background-color: #FFFFFF;
+}
+.group-1__numbers {
+  position: absolute;
+}
+.group-1__numbers {
+  font-family: "Titan One", cursive;
+  color: #D41443;
+  font-size: 46px;
+  margin-top: 66px;
+  margin-left: 1248px;
+}
+.group-1__numbers--23 {
+  position: absolute;
+  font-family: "Titan One", cursive;
+  color: #D41443;
+  font-size: 46px;
+  margin-top: 36px;
+  margin-left: 1240px;
+}
+.group-1__text {
+  font-family: "DM Sans", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 112px;
+  margin-left: 1248px;
+  color: #FFFFFF;
+}
+.group-1__text--truck {
+  font-family: "DM Sans", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  margin-top: 86px;
+  margin-left: 1230px;
+  color: #FFFFFF;
+}
+
+.group-2 {
+  clear: both;
+  margin-left: 70px;
+}
+.group-2__img {
+  float: left;
+  margin-top: 40px;
+}
+.group-2__p {
+  float: left;
+  margin-top: 110px;
+  color: #FFFFFF;
+  font-family: "DM Sans", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+}
+.group-2__svg {
+  margin-top: 20px;
 }/*# sourceMappingURL=judith.css.map */
