--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -12,9 +12,11 @@ header
 .nav
     display: flex
     justify-content: center
-    background-color: #9c054111
+    &__elipse
+        position: absolute
+        margin-top: 75px
+        margin-left: 360px
     &__img
-
         margin-top: 37px
     &__link--pink2
         margin-top: 54px
@@ -22,6 +24,8 @@ header
     &__link
         margin-top: 54px
         color: $whithe
+    &__link--2
+        margin-top: 54px
     &__button
         width: 159px
         height: 44px
@@ -39,13 +43,16 @@ header
         color: $pink2
     &__svg
         margin-left: 12px
-
+.ice
+    position: absolute
+    margin-left: 750px
+    margin-top: 17px
 .content
     float: left
     position: relative
     margin-top: 74px
     margin-left: 70px
-    background-color: #fb0cbb
+
     &__title
         font-family: $font-titan
         font-size: 38px
@@ -58,13 +65,85 @@ header
         line-height: 43.51px
         letter-spacing: 4%
         color: $pink2
+    &__buttons
+        margin-top: 24px
+    &__button
+        width: 107px
+        height: 40px
+        border: none
+        border-radius: 20px
+        background-color: $pink2
+        font-family: $font-sans
+        font-size: 14px
+        line-height: 18px
+        font-weight: 400
+        color: $whithe
+        margin-right: 12px
+    &__button--whithe
+        width: 138px
+        height: 40px
+        border: none
+        border-radius: 20px
+        background-color: $whithe
+        font-family: $font-sans
+        font-size: 14px
+        font-weight: 400
+        line-height: 18px
+        color: $pink2
+
 .group
-    position: relative
     margin-left: 1280px
-    background-color: black
+
     &__svg
         margin-top: 66px
 .group-1
     position: absolute
 
-    background-color: $whithe
+    &__numbers
+        position: absolute
+
+    &__numbers
+        font-family: $font-titan
+        color: $pink2
+        font-size: 46px
+        margin-top: 66px
+        margin-left: 1248px
+    &__numbers--23
+        position: absolute
+        font-family: $font-titan
+        color: $pink2
+        font-size: 46px
+        margin-top: 36px
+        margin-left: 1240px
+    &__text
+        font-family: $font-sans
+        font-size: 14px
+        line-height: 18px
+        margin-top: 112px
+        margin-left: 1248px
+        color: $whithe
+    &__text--truck
+        font-family: $font-sans
+        font-size: 14px
+        line-height: 18px
+        margin-top: 86px
+        margin-left: 1230px
+        color: $whithe
+.group-2
+
+    clear: both
+    margin-left: 70px
+    &__img
+        float: left
+        margin-top: 40px
+
+    &__p
+        float: left
+        margin-top: 110px
+        color: $whithe
+        font-family: $font-sans
+        font-size: 14px
+        line-height: 20px
+
+    &__svg
+        margin-top: 20px
