add animation bubbles

--- a/src/partials/judith.html
+++ b/src/partials/judith.html
@@ -157,6 +157,14 @@
       </div>
       <div class="bubbles">
         <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
+        <div class="bubbles__bubble"></div>
       </div>
     </header>
   </body>
