--- a/src/sass/judith.sass
+++ b/src/sass/judith.sass
@@ -174,17 +174,87 @@ header
         border-radius: 50px
         background-color: $whithe
         opacity: .5
-        position: absolute
+        position: relative
         bottom: 0
         animation-name: flotar
-        animation-duration: 2s
+        animation-duration: 5s
+        left: 2%
         animation-iteration-count: infinite
-        animation-direction: alternate
+        animation-direction: normal
+
+    &__bubble:nth-of-type(1)
+        width: 100px
+        position: relative
+        height: 100px
+        left: 1%
+        animation-duration: 5s
+        background-color: $pink2
+    &__bubble:nth-of-type(2)
+        position: relative
+        width: 30px
+        height: 30px
+        left: 10%
+        animation-duration: 5s
+        background-color: green
+    &__bubble:nth-of-type(3)
+        width: 200px
+        height: 200px
+        border-radius: 100px
+        left: 20%
+        animation-duration: 5s
+        position: absolute
+        background-color: yellow
+    &__bubble:nth-of-type(4)
+        width: 70px
+        height: 70px
+        left: 30%
+        animation-duration: 5s
+        background-color: brown
+    &__bubble:nth-of-type(5)
+        width: 45px
+        height: 45px
+        left: 50%
+        animation-duration: 5s
+        background-color: blue
+    &__bubble:nth-of-type(6)
+        width: 85px
+        height: 85px
+        left: 90%
+        animation-duration: 5s
+        background-color: red
+    &__bubble:nth-of-type(7)
+        width: 85px
+        height: 85px
+        left: 75%
+        animation-duration: 5s
+        background-color: violet
+    &__bubble:nth-of-type(8)
+        width: 30px
+        height: 30px
+        left: 65%
+        animation-duration: 5s
+        background-color: green
+    &__bubble:nth-of-type(9)
+        width: 200px
+        height: 200px
+        border-radius: 100px
+        left: 65%
+        animation-duration: 5s
+        background-color: yellow
 
 @keyframes flotar
     0%
-        transform: translate(-90%)
+
+        bottom: 0
+        transform: translateX(0%) translateY(0%)
     25%
-        transform: translateX(0%) translateY()70%
+        transform: translateX(20%) translateY(0%)
+    50%
+        transform: translateX(0%) translateY(0%)
+    75%
+        transform: translateX(0%) translateY(0%)
     100%
-        transform: translateX(100%) translateY(-500%)
+
+        opacity: .9%
+        transform: translateX(0%) translateY(0%)
+        bottom: 100vh
