--- a/src/sass/judith.css
+++ b/src/sass/judith.css
@@ -216,38 +216,134 @@ header {
   border-radius: 50px;
   background-color: #FFFFFF;
   opacity: 0.5;
-  position: absolute;
+  position: relative;
   bottom: 0;
   -webkit-animation-name: flotar;
           animation-name: flotar;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  left: 2%;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+}
+.bubbles__bubble:nth-of-type(1) {
+  width: 100px;
+  position: relative;
+  height: 100px;
+  left: 1%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: #D41443;
+}
+.bubbles__bubble:nth-of-type(2) {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  left: 10%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: green;
+}
+.bubbles__bubble:nth-of-type(3) {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  left: 20%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  position: absolute;
+  background-color: yellow;
+}
+.bubbles__bubble:nth-of-type(4) {
+  width: 70px;
+  height: 70px;
+  left: 30%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: brown;
+}
+.bubbles__bubble:nth-of-type(5) {
+  width: 45px;
+  height: 45px;
+  left: 50%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: blue;
+}
+.bubbles__bubble:nth-of-type(6) {
+  width: 85px;
+  height: 85px;
+  left: 90%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: red;
+}
+.bubbles__bubble:nth-of-type(7) {
+  width: 85px;
+  height: 85px;
+  left: 75%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: violet;
+}
+.bubbles__bubble:nth-of-type(8) {
+  width: 30px;
+  height: 30px;
+  left: 65%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: green;
+}
+.bubbles__bubble:nth-of-type(9) {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  left: 65%;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  background-color: yellow;
 }
 
 @-webkit-keyframes flotar {
   0% {
-    transform: translate(-90%);
+    bottom: 0;
+    transform: translateX(0%) translateY(0%);
   }
   25% {
-    transform: translateX(0%) translateY() 70%;
+    transform: translateX(20%) translateY(0%);
+  }
+  50% {
+    transform: translateX(0%) translateY(0%);
+  }
+  75% {
+    transform: translateX(0%) translateY(0%);
   }
   100% {
-    transform: translateX(100%) translateY(-500%);
+    opacity: 0.9%;
+    transform: translateX(0%) translateY(0%);
+    bottom: 100vh;
   }
 }
 
 @keyframes flotar {
   0% {
-    transform: translate(-90%);
+    bottom: 0;
+    transform: translateX(0%) translateY(0%);
   }
   25% {
-    transform: translateX(0%) translateY() 70%;
+    transform: translateX(20%) translateY(0%);
+  }
+  50% {
+    transform: translateX(0%) translateY(0%);
+  }
+  75% {
+    transform: translateX(0%) translateY(0%);
   }
   100% {
-    transform: translateX(100%) translateY(-500%);
+    opacity: 0.9%;
+    transform: translateX(0%) translateY(0%);
+    bottom: 100vh;
   }
 }/*# sourceMappingURL=judith.css.map */
